fix: center fatura layout with fixed left column aligned to container

--- a/frontend/src/pages/Fatura.css
+++ b/frontend/src/pages/Fatura.css
@@ -19,6 +19,8 @@
   padding: 32px 36px;
   max-width: 1400px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 768px) {
@@ -625,13 +627,23 @@
 /* LEFT COLUMN - Fatura Card Fixed & Centered */
 .fatura-column-left {
   position: fixed;
-  width: calc(50% - 18px);
+  width: calc((100vw - 1400px) / 2 + 36px + 686px);
+  max-width: 686px;
   top: 340px;
-  left: 36px;
+  left: 0;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  padding-right: 28px;
   z-index: 40;
+}
+
+@media (max-width: 1400px) {
+  .fatura-column-left {
+    width: calc(50vw - 14px);
+    padding-right: 0;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -640,26 +652,14 @@
     width: 100%;
     top: auto;
     left: auto;
-  }
-}
-
-@media (max-width: 768px) {
-  .fatura-column-left {
-    left: 16px;
-    width: calc(50vw - 16px);
+    padding-right: 0;
+    max-width: none;
   }
 }
 
 /* RIGHT COLUMN - Transações List */
 .fatura-column-right {
   width: 100%;
-  margin-left: calc(50% + 14px);
-}
-
-@media (max-width: 1024px) {
-  .fatura-column-right {
-    margin-left: 0;
-  }
 }
 
 /* FATURA CARD */
